--- a/public/output.css
+++ b/public/output.css
@@ -561,16 +561,16 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.visible{
+  visibility: visible;
+}
+
 .fixed{
   position: fixed;
 }
 
 .relative{
   position: relative;
-}
-
-.top-0{
-  top: 0px;
 }
 
 .bottom-0{
@@ -581,72 +581,12 @@ video {
   right: 0px;
 }
 
-.right-1{
-  right: 0.25rem;
-}
-
-.top-\[10\%\]{
-  top: 10%;
-}
-
-.top-2{
-  top: 0.5rem;
-}
-
-.top-10{
-  top: 2.5rem;
-}
-
-.top-\[15\%\]{
-  top: 15%;
-}
-
-.top-\[7\.5\%\]{
-  top: 7.5%;
-}
-
-.top-\[8\%\]{
-  top: 8%;
-}
-
-.right-\[1\/6\]{
-  right: 1/6;
-}
-
-.right-3\/4{
-  right: 75%;
-}
-
-.left-3\/4{
-  left: 75%;
-}
-
-.left-1\/2{
-  left: 50%;
-}
-
-.right-\[0\.16vw\]{
-  right: 0.16vw;
-}
-
-.right-2{
-  right: 0.5rem;
-}
-
-.right-10{
-  right: 2.5rem;
-}
-
-.right-5{
-  right: 1.25rem;
-}
-
 .right-7{
   right: 1.75rem;
 }
 
-.top-\[60\%\]{
-  top: 60%;
+.top-0{
+  top: 0px;
 }
 
 .top-\[50\%\]{
@@ -657,61 +597,75 @@ video {
   z-index: 40;
 }
 
+.m-10{
+  margin: 2.5rem;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-3{
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
+.my-5{
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
 .ml-\[33\%\]{
   margin-left: 33%;
 }
 
+.mr-2{
+  margin-right: 0.5rem;
+}
+
+.mt-5{
+  margin-top: 1.25rem;
+}
+
 .flex{
   display: flex;
 }
 
-.h-full{
-  height: 100%;
+.hidden{
+  display: none;
 }
 
-.h-80{
-  height: 20rem;
+.h-0{
+  height: 0px;
 }
 
-.h-\[80\%\]{
-  height: 80%;
-}
-
-.h-\[90\%\]{
-  height: 90%;
+.h-0\.5{
+  height: 0.125rem;
 }
 
 .h-3{
   height: 0.75rem;
 }
 
-.w-5\/6{
-  width: 83.333333%;
+.h-full{
+  height: 100%;
 }
 
-.w-full{
-  width: 100%;
+.w-3{
+  width: 0.75rem;
+}
+
+.w-5\/6{
+  width: 83.333333%;
 }
 
 .w-\[250px\]{
   width: 250px;
 }
 
-.w-\[0\.25vw\]{
-  width: 0.25vw;
-}
-
-.w-\[20vw\]{
-  width: 20vw;
-}
-
-.w-3{
-  width: 0.75rem;
+.w-full{
+  width: 100%;
 }
 
 .resize{
@@ -722,24 +676,44 @@ video {
   flex-direction: column;
 }
 
+.flex-wrap{
+  flex-wrap: wrap;
+}
+
 .items-center{
   align-items: center;
+}
+
+.justify-start{
+  justify-content: flex-start;
 }
 
 .justify-end{
   justify-content: flex-end;
 }
 
+.justify-center{
+  justify-content: center;
+}
+
 .justify-between{
   justify-content: space-between;
+}
+
+.justify-evenly{
+  justify-content: space-evenly;
+}
+
+.gap-10{
+  gap: 2.5rem;
 }
 
 .gap-16{
   gap: 4rem;
 }
 
-.gap-10{
-  gap: 2.5rem;
+.gap-4{
+  gap: 1rem;
 }
 
 .gap-6{
@@ -750,9 +724,13 @@ video {
   border-radius: 9999px;
 }
 
-.bg-deep-blue{
+.rounded-md{
+  border-radius: 0.375rem;
+}
+
+.bg-\[\#161616\]{
   --tw-bg-opacity: 1;
-  background-color: rgb(1 0 38 / var(--tw-bg-opacity));
+  background-color: rgb(22 22 22 / var(--tw-bg-opacity));
 }
 
 .bg-blue{
@@ -765,70 +743,51 @@ video {
   background-color: rgb(117 117 117 / var(--tw-bg-opacity));
 }
 
+.bg-deep-blue{
+  --tw-bg-opacity: 1;
+  background-color: rgb(1 0 38 / var(--tw-bg-opacity));
+}
+
 .bg-yellow{
   --tw-bg-opacity: 1;
   background-color: rgb(253 204 73 / var(--tw-bg-opacity));
+}
+
+.bg-gradient-rainblue{
+  background-image: linear-gradient(90deg, #24CBFF 14.53%, #FC59FF 69.36%, #FFBD0C 117.73%);
+}
+
+.p-0{
+  padding: 0px;
+}
+
+.p-0\.5{
+  padding: 0.125rem;
 }
 
 .p-2{
   padding: 0.5rem;
 }
 
-.p-12{
-  padding: 3rem;
-}
-
-.p-6{
-  padding: 1.5rem;
+.p-24{
+  padding: 6rem;
 }
 
 .p-8{
   padding: 2rem;
 }
 
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+.p-10{
+  padding: 2.5rem;
 }
 
-.px-12{
-  padding-left: 3rem;
-  padding-right: 3rem;
+.p-1{
+  padding: 0.25rem;
 }
 
-.px-\[15\]{
-  padding-left: 15;
-  padding-right: 15;
-}
-
-.px-\[15px\]{
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.px-16{
-  padding-left: 4rem;
-  padding-right: 4rem;
-}
-
-.px-6{
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.px-2{
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.px-3{
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
+.px-1{
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 
 .px-5{
@@ -836,22 +795,51 @@ video {
   padding-right: 1.25rem;
 }
 
-.font-playfair{
-  font-family: Playfair Display, serif;
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-1\.5{
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-48{
+  padding-top: 12rem;
+  padding-bottom: 12rem;
+}
+
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.text-center{
+  text-align: center;
 }
 
 .font-opensans{
   font-family: Open Sans, sans-serif;
 }
 
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.font-playfair{
+  font-family: Playfair Display, serif;
 }
 
 .text-2xl{
@@ -859,9 +847,50 @@ video {
   line-height: 2rem;
 }
 
-.text-base{
-  font-size: 1rem;
-  line-height: 1.5rem;
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-6xl{
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
+.text-\[12px\]{
+  font-size: 12px;
+}
+
+.text-\[15px\]{
+  font-size: 15px;
+}
+
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-\[10px\]{
+  font-size: 10px;
+}
+
+.text-\[16px\]{
+  font-size: 16px;
 }
 
 .font-bold{
@@ -872,11 +901,6 @@ video {
   font-weight: 600;
 }
 
-.text-yellow{
-  --tw-text-opacity: 1;
-  color: rgb(253 204 73 / var(--tw-text-opacity));
-}
-
 .text-blue{
   --tw-text-opacity: 1;
   color: rgb(44 188 233 / var(--tw-text-opacity));
@@ -885,6 +909,21 @@ video {
 .text-deep-blue{
   --tw-text-opacity: 1;
   color: rgb(1 0 38 / var(--tw-text-opacity));
+}
+
+.text-gray-300{
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
+.text-gray-400{
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .text-white{
@@ -900,12 +939,12 @@ video {
   transition-duration: 150ms;
 }
 
-.duration-500{
-  transition-duration: 500ms;
-}
-
 .duration-300{
   transition-duration: 300ms;
+}
+
+.duration-500{
+  transition-duration: 500ms;
 }
 
 html,
@@ -913,7 +952,7 @@ body,
 #root,
 .app {
   height: 100%;
-  background-color: #212121;
+  background-color: #2d2d2d;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
@@ -959,9 +998,8 @@ body,
   border-color: rgb(253 204 73 / var(--tw-border-opacity));
 }
 
-.hover\:text-yellow:hover{
-  --tw-text-opacity: 1;
-  color: rgb(253 204 73 / var(--tw-text-opacity));
+.hover\:bg-gradient-rainblue:hover{
+  background-image: linear-gradient(90deg, #24CBFF 14.53%, #FC59FF 69.36%, #FFBD0C 117.73%);
 }
 
 .hover\:text-blue:hover{
@@ -969,8 +1007,135 @@ body,
   color: rgb(44 188 233 / var(--tw-text-opacity));
 }
 
+.hover\:text-deep-blue:hover{
+  --tw-text-opacity: 1;
+  color: rgb(1 0 38 / var(--tw-text-opacity));
+}
+
+.hover\:opacity-50:hover{
+  opacity: 0.5;
+}
+
+@media (min-width: 760px){
+  .sm\:my-10{
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+  }
+
+  .sm\:w-3\/4{
+    width: 75%;
+  }
+
+  .sm\:w-3\/5{
+    width: 60%;
+  }
+
+  .sm\:flex-row{
+    flex-direction: row;
+  }
+
+  .sm\:justify-center{
+    justify-content: center;
+  }
+
+  .sm\:gap-6{
+    gap: 1.5rem;
+  }
+
+  .sm\:p-16{
+    padding: 4rem;
+  }
+
+  .sm\:px-10{
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
+  .sm\:py-3{
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
+  .sm\:text-6xl{
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
+  .sm\:text-8xl{
+    font-size: 6rem;
+    line-height: 1;
+  }
+
+  .sm\:text-\[17px\]{
+    font-size: 17px;
+  }
+
+  .sm\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .sm\:text-7xl{
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+}
+
 @media (min-width: 1060px){
-  .md\:h-full{
-    height: 100%;
+  .md\:w-5\/6{
+    width: 83.333333%;
+  }
+
+  .md\:justify-start{
+    justify-content: flex-start;
+  }
+
+  .md\:gap-16{
+    gap: 4rem;
+  }
+
+  .md\:gap-8{
+    gap: 2rem;
+  }
+
+  .md\:p-24{
+    padding: 6rem;
+  }
+
+  .md\:py-10{
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+  }
+
+  .md\:py-4{
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .md\:text-7xl{
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
+  .md\:text-9xl{
+    font-size: 8rem;
+    line-height: 1;
+  }
+
+  .md\:text-\[25px\]{
+    font-size: 25px;
+  }
+
+  .md\:text-8xl{
+    font-size: 6rem;
+    line-height: 1;
+  }
+
+  .md\:text-\[8\.5rem\]{
+    font-size: 8.5rem;
+  }
+
+  .md\:text-\[8rem\]{
+    font-size: 8rem;
   }
 }
